Post method added for invoices

--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -36,6 +36,12 @@
     },
     "Invoices": {
       "source": "invoices",
+      "rest":{
+        "methods":["GET","POST"]
+      },
+      "graphql":{
+        "operation":"query"
+      },
       "permissions": [
         {
           "role": "anonymous",
