--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -9,7 +9,7 @@
         "rewrite": "/index.html"
     },
     "globalHeaders": {
-        "Access-Control-Allow-Origin": "https://example.com",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
     }
 }
