--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,7 +3,11 @@
         {
             "route": "/",
             "rewrite": "/index.html"
-        }
+        },
+        {
+      "route": "/data-api/rest/*",
+      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
+    },
     ],
     "navigationFallback": {
         "rewrite": "/index.html"
