--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
     "routes": [
         {
             "route": "/",
-            "rewrite": "/index.html"
+            "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
         },
         {
       "route": "/data-api/rest/*",
