--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,11 +3,19 @@
   "routes": [
     {
       "route": "/api/*",
-      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
+      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
+      "headers": {
+              "Access-Control-Allow-Origin": "*",
+              "Access-Control-Allow-Methods": "GET, POST, OPTIONS"
+      }
     },
     {
       "route": "/data-api/rest/*",
-      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
+      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
+      "headers": {
+              "Access-Control-Allow-Origin": "*",
+              "Access-Control-Allow-Methods": "GET, POST, OPTIONS"
+      }
     }
   ],
   "globalHeaders": {
