--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -17,7 +17,7 @@
     "host": {
       "mode": "production",
       "cors": {
-        "origins": "*",
+        "origins": ["*"],
         "allow-credentials": false
       }
     }
