--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -4,17 +4,12 @@
     {
       "route": "/api/*",
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
-      "headers": {
-              "Access-Control-Allow-Origin": "*",
-              "Access-Control-Allow-Methods": "GET, POST, OPTIONS"
-      }
+      "headers": ''
     },
     {
       "route": "/data-api/rest/*",
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
-      "headers": {
-              "Access-Control-Allow-Origin": "*",
-              "Access-Control-Allow-Methods": "GET, POST, OPTIONS"
+      "headers": ''
       }
     }
   ],
