--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,12 +3,12 @@
     {
       "route": "/api/*",
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
-      "headers": ''
+      "headers": ""
     },
     {
       "route": "/data-api/rest/*",
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
-      "headers": ''
+      "headers": ""
     }
   ],
   "globalHeaders": {
