--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -10,5 +10,11 @@
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
       "headers": ""
     }
-  ]
+  ],
+  {
+  "globalHeaders": {
+    "Access-Control-Allow-Origin": "*",
+    "Access-Control-Allow-Methods": "GET, POST, PUT"
+  }
+}
 }
