--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -12,7 +12,7 @@
     }
   ],
   "globalHeaders": {
-    "Access-Control-Allow-Origin": "*",
+    "Access-Control-Allow-Origin": "https://editor.swagger.io",
     "Access-Control-Allow-Methods": "GET, POST, PUT"
   }
 }
