--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,7 +5,7 @@
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
     },
     {
-      "route": "/api/*",
+      "route": "/*",
       "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
     },
     {
