--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -17,7 +17,8 @@
     "host": {
       "mode": "development",
       "cors": {
-        "origins": ["https://editor.swagger.io"]
+        "origins": ["*"],
+	"allow-credentials": true     
       }
     }
   },
