--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -18,7 +18,7 @@
       "mode": "development",
       "cors": {
         "origins": ["*"],
-	"allow-credentials": true     
+	"allow-credentials": false     
       }
     }
   },
