--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,6 +11,6 @@
   ],
   "globalHeaders": {
     "Access-Control-Allow-Origin": "*",
-    "Access-Control-Allow-Methods": "GET, POST, PUT, OPTIONS"
+    "Access-Control-Allow-Methods": "*"
   }
 }
