--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -9,8 +9,7 @@
   },
   "runtime": {
     "rest": {
-      "path": "/rest",
-      "methods":["GET","POST"]
+      "path": "/rest"
     },
     "graphql": {
       "path": "/graphql"
