--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,6 +11,7 @@
   ],
   "globalHeaders": {
     "Access-Control-Allow-Origin": "*",
-    "Access-Control-Allow-Methods": "*"
+    "Access-Control-Allow-Methods": "*",
+    "Access-Control-Allow-Credentials": "false"
   }
 }
