--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -12,6 +12,7 @@
   "globalHeaders": {
     "Access-Control-Allow-Origin": "*",
     "Access-Control-Allow-Methods": "*",
+    "Access-Control-Allow-Headers": "*",
     "Access-Control-Allow-Credentials": "false"
   }
 }
