--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,11 +2,23 @@
   "routes": [
     {
       "route": "/api/*",
-      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
+      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
+       "headers":{
+      "Access-Control-Allow-Origin": "*",
+      "Access-Control-Allow-Methods": "*",
+      "Access-Control-Allow-Headers": "*",
+      "Access-Control-Allow-Credentials": "false"
+    }
     },
     {
       "route": "/data-api/rest/GetInvoiceCountCountryWise",
-      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"]
+      "methods": ["PUT", "POST", "PATCH", "DELETE","GET"],
+      "headers":{
+      "Access-Control-Allow-Origin": "*",
+      "Access-Control-Allow-Methods": "*",
+      "Access-Control-Allow-Headers": "*",
+      "Access-Control-Allow-Credentials": "false"
+    }
     }
   ],
   "globalHeaders": {
